erDiagram
    CUSTOMERS ||--o{ STATUS : "makes"
    VEHICLES  ||--o{ STATUS : "has history"
    CUSTOMERS ||--o| SECURITY : "may have account"

    CUSTOMERS {
        int customerId PK
        string email
        string other_fields "from customer.csv"
    }

    VEHICLES {
        int vehicle_id PK
        string other_fields "from vehicle.csv"
    }

    STATUS {
        int rental_id PK
        int customer_id FK
        int vehicle_id FK
        datetime status_date_time
        string status_location "Bristol, Manchester, Luton"
        string status "AVAILABLE, RENTED, RETURNED, DAMAGED, SERVICEREQ"
    }

    SECURITY {
        int security_id PK
        string role "CUSTOMER, STAFF"
        int customer_id FK "NULL for STAFF"
        string username
        string password_hash
        string apikey
    }
